[gd_scene load_steps=6 format=3 uid="uid://clvk0kxtgfpgg"]

[ext_resource type="Texture2D" uid="uid://bbxa7gkile6im" path="res://content/sprites/gothic/healthbar_full.tres" id="1_83mwn"]
[ext_resource type="Script" path="res://scripts/ui/healthbars/HealthBar.gd" id="2_2rhyx"]
[ext_resource type="Texture2D" uid="uid://dhrhlaxkw0idd" path="res://content/sprites/gothic/healthbar_half.tres" id="3_cn8n7"]
[ext_resource type="PackedScene" uid="uid://27ueyvgi0pfn" path="res://scenes/2d/VisualObject.tscn" id="4_hcka7"]
[ext_resource type="Texture2D" uid="uid://dylewl2lgpsng" path="res://content/sprites/white_box.png" id="5_cqnqd"]

[node name="HealthBar" type="Sprite2D"]
texture_filter = 1
position = Vector2(2.08165e-12, 2.08165e-12)
texture = ExtResource("1_83mwn")
centered = false
script = ExtResource("2_2rhyx")
sprite_full_texture = ExtResource("1_83mwn")
sprite_half_texture = ExtResource("3_cn8n7")

[node name="Back" parent="." instance=ExtResource("4_hcka7")]
modulate = Color(0.2, 0.2, 0.27451, 1)
scale = Vector2(0.75, 0.1875)
texture = ExtResource("5_cqnqd")

[node name="LineHealth" parent="." instance=ExtResource("4_hcka7")]
modulate = Color(0.501961, 0.501961, 0.643137, 1)
position = Vector2(1, 1)
scale = Vector2(0.625, 0.0625)
texture = ExtResource("5_cqnqd")

[node name="LineArmor" parent="." instance=ExtResource("4_hcka7")]
modulate = Color(0.65098, 0.65098, 0.74902, 1)
position = Vector2(1, 3)
scale = Vector2(0.625, 0.0625)
texture = ExtResource("5_cqnqd")
